--- a/NRP/package.json
+++ b/NRP/package.json
@@ -18,10 +18,12 @@
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
+    "axios": "^0.23.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "jquery": "^3.6.0",
     "mongoose": "^6.0.9",
     "multer": "^1.4.3",
     "path": "^0.12.7",
@@ -34,6 +36,7 @@
     "@angular/cli": "~12.2.1",
     "@angular/compiler-cli": "~12.2.0",
     "@types/jasmine": "~3.8.0",
+    "@types/jquery": "^3.5.7",
     "@types/node": "^12.11.1",
     "jasmine-core": "~3.8.0",
     "karma": "~6.3.0",
