--- a/NRP/package.json
+++ b/NRP/package.json
@@ -26,6 +26,7 @@
     "jquery": "^3.6.0",
     "mongoose": "^6.0.9",
     "multer": "^1.4.3",
+    "ngx-cookie-service": "^12.0.3",
     "path": "^0.12.7",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
