--- a/NRP/package.json
+++ b/NRP/package.json
@@ -18,8 +18,10 @@
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
+    "@popperjs/core": "^2.10.2",
     "axios": "^0.23.0",
     "body-parser": "^1.19.0",
+    "bootstrap": "^5.1.3",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
